<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cf.javadev.appportfolio.MainFragment"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="260dp"
            android:layout_height="92dp"
            android:gravity="center"
            android:textSize="@dimen/main_text_size"
            android:text="@string/tv_my_nanodegree" />

        <Button
            android:id="@+id/btnPopularMovies"
            style="@style/AppTitleButton"
            android:text="@string/btn_popular_movies" />

        <Button
            android:id="@+id/btnStockHawk"
            style="@style/AppTitleButton"
            android:text="@string/btn_stock_hawk" />

        <Button
            android:id="@+id/btnBuildBigger"
            style="@style/AppTitleButton"
            android:text="@string/btn_build_it_bigger" />

        <Button
            android:id="@+id/btnMakeAppMaterial"
            style="@style/AppTitleButton"
            android:text="@string/btn_make_app_material" />

        <Button
            android:id="@+id/btnUbiquitous"
            style="@style/AppTitleButton"
            android:text="@string/btn_go_ubiquitous" />

        <Button
            android:id="@+id/btnCapstone"
            style="@style/AppTitleButton"
            android:text="@string/btn_capstone" />
    </LinearLayout>

</ScrollView>
